2009-04-05  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c: Avoid situations where we add the separator if one
	of the elements is the separator.

2009-04-02  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c: If the first element is NULL, return an empty
	string. 

2009-02-19 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* src/gstr.c: use memset in g_strnfill.

2009-01-19  Bill Holmes  <billholmes54@gmail.com>

	* src/gstr.c (g_strnfill):  Fixing a warning for MSVC.

	Contributed under MIT/X11 license.

2009-02-05  Miguel de Icaza  <miguel@novell.com>

	* src/gstr.c: Add g_strnfill

	* src/glib.h: Add g_list_previous

2009-01-19  Bill Holmes  <billholmes54@gmail.com>

	* gmisc-win32.c (g_path_is_absolute):  Adding support for UNC
	  paths on Windows.

	Contributed under MIT/X11 license.

2009-01-08  Bill Holmes  <billholmes54@gmail.com>

	* winconfig.h, src/gfile-posix.c :
	  Fixing the MSVC builds.

	Contributed under MIT/X11 license.

2009-01-07  Miguel de Icaza  <miguel@novell.com>

	* src/gfile-posix.c: Move g_get_current_dir, as it is a
	POSIX-esque feature, and some other systems do not have current
	directories. 

	* src/glib.h (G_LOCK_DEFINE, G_LOCK_DEFINE_STATIC): 

	Embedded support from Paolo's work on quack.
	
	* configure.ac: check for strtok_r, langinfo.h and iconv.h
	
	* src/gpath.c (strtok_r): Add a strtok_r implementation if it is
	not available on the target system.

2008-11-05  Bill Holmes  <billholmes54@gmail.com>

	* src/gutf8.c, src/unicode-data.h, src/gunicode.c :
	  Fixing the MSVC builds.

	Contributed under MIT/X11 license.

2008-11-04  Atsushi Enomoto  <atsushi@ximian.com>

	* src/gutf8.c, src/gunicode.c, src/glib.h:
	  implemented g_unichar_type(), g_unichar_toupper(),
	  g_unichar_tolower(), g_unichar_totitle(), g_utf8_strup()
	  and g_utf8_strdown(). Fixed some surrogate pair bugs.
	* TODO : removed implemented things.
	* test/unicode.c, test/tests.h, test/utf8.c, test/Makefile.am:
	  added new tests.
